--- a/MyPersist/pom.xml
+++ b/MyPersist/pom.xml
@@ -17,7 +17,6 @@
     </properties>
 
     <dependencies>
-
         <!--
         <dependency>
             <groupId>org.mybatis</groupId>
@@ -25,7 +24,6 @@
             <version>3.4.5</version>
         </dependency>
         -->
-
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -33,6 +31,21 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>jaxen</groupId>
+            <artifactId>jaxen</artifactId>
+            <version>1.1.6</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
